# DataSet-Grey-Paralelo

./: CMakeLists.txt  main.cu
